chore(build): augment default VM options